--- a/src/components/chartBox/chartBox.scss
+++ b/src/components/chartBox/chartBox.scss
@@ -1,3 +1,5 @@
+@import "../../styles/responsive";
+
 .chartBox {
   display: flex;
   height: 100%;
@@ -12,6 +14,16 @@
       display: flex;
       align-items: center;
       gap: 10px;
+
+      @include xxl {
+        font-size: 14px;
+      }
+    }
+
+    h1 {
+      @include xxl {
+        font-size: 20px;
+      }
     }
   }
 
@@ -34,6 +46,10 @@
       .percentage {
         font-weight: bold;
         font-size: 20px;
+
+        @include xxl {
+          font-size: 16px;
+        }
       }
 
       .duration {
