--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "responsive";
 
 * {
   margin: 0;
@@ -21,12 +22,18 @@ a {
 
 .container {
   display: flex;
+
+  @include xxl {}
 }
 
 .menuContainer {
   width: 250px;
   padding: 5px 20px;
   border-right: 2px solid $soft-bg;
+
+  @include lg {
+    width: max-content;
+  }
 }
 
 .contentContainer {
